# ProyectoP3Auxiliar

./: BaseDeDatos.cpp  BaseDeDatos.h  CMakeLists.txt  Competicion.cpp  Competicion.h  Equipo.cpp  Equipo.h  GestorConsultas.cpp  GestorConsultas.h  InterfazUsuario.cpp  InterfazUsuario.h  Partido.cpp  Partido.h  main.cpp  main.out  programa
Arbol/: ArbolBinario.h  ArbolBinarioAVL.h  NodoArbol.h  NodoArbolAVL.h
Arboles/: ArbolBinario.h  ArbolBinarioAVL.h  NodoArbol.h  NodoArbolAVL.h
Listas/: CircList.h  Lista.h  ListaDoble.h  Nodo.h
Recursos/: Base de datos - Actualizada.csv  BaseDeDatosActCOMA.csv  Consignas
